tests/errors/sem.invalid-void.decl-type.or
main :: () -> void {
    x: void = .{};
    x;
};
